# RoomPriceGenie

./: .env.example  .gitignore  Dockerfile  Readme.md  api.py  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml
RoomPriceGenie/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
dashboard/: models.py  tasks.py  tests.py  urls.py  utils.py  views.py
dashboard/migrations/: 0001_initial.py  0002_delete_dashboardevent.py  0003_initial.py
data_provider/: admin.py  models.py  serializer.py  tasks.py  tests.py  urls.py  views.py
data_provider/management/commands/: insertdata.py
data_provider/migrations/: 0001_initial.py  0002_rename_status_event_rpg_status.py  0003_rename_room_reservation_id_event_room_id.py  0004_event_added_to_dashboard_event_created_at.py  0005_alter_event_id.py
